# htmx-playground

./: README.md  pyproject.toml
todo_roject/: .gitignore  manage.py
todo_roject/todo_roject/: asgi.py  settings.py  urls.py  wsgi.py
todo_roject/todos/: admin.py  htmlx_views.py  models.py  serializers.py  urls.py
todo_roject/todos/migrations/: 0001_initial.py
todo_roject/todos/templates/: base.html  todo_create.html  todo_item.html  todo_list.html  todo_update.html
