[tool.poetry]
name = "htmx-playground"
version = "0.1.0"
description = ""
authors = ["Andrea Del Corto <andrea.delcorto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-tailwind = {version = "^3.8.0", extras = ["reload"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
